# coverly

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LOGS.md  README.md
backend/: .env.example  AGENTS.md  PROMPTING.md  REFERENCE_DATA.md  pyproject.toml
backend/app/: errors.py  lifespan.py  main.py  settings.py
backend/app/core/: __init__.py  config.py  diagnostics.py  errors.py  generation.py  grounding.py  lifespan.py  limits.py  middleware.py  pii.py  responses.py  tables.py  untrusted.py
backend/app/modules/: __init__.py
backend/app/rag/: __init__.py  embeddings.py  lexical.py  scoring.py  text.py
backend/app/routes/: __init__.py  analysis.py  policies.py  portfolio.py  qa.py
backend/app/schemas/: __init__.py  analysis.py  consultation.py  portfolio.py  qa.py
backend/app/services/: __init__.py  claim_channels.py  classification.py  coverage.py  coverage_name_matching.py  coverage_name_rules.py  coverage_purpose.py  demographics.py  disclosure_links.py  explain.py  grounding.py  llm.py  parsing.py  paths.py  pdf_text.py  pipeline.py  policy_classification.py  policy_classification_rules.json  policy_document.py  policy_llm_extraction.py  policy_summary.py  policy_summary_local.py  portfolio_analysis.py  portfolio_analysis_generation.py  (+12 more)
backend/data/: README.md
backend/evals/: README.md  __init__.py
backend/scripts/: __init__.py  seed_reference_data.py  sync_reference_data.py
backend/tests/: conftest.py  summary_helpers.py  test_analysis_qa_routes.py  test_architecture.py  test_claim_channels.py  test_classification.py  test_consultation_quality.py  test_cors.py  test_coverage.py  test_coverage_amount.py  test_coverage_explain.py  test_coverage_extraction.py  test_coverage_name_matching.py  test_coverage_normalize.py  test_coverage_purpose.py  test_coverage_table.py  test_demographics.py  test_disclosure_links.py  test_explain.py  test_financial_assessment.py  test_grounding.py  test_indemnity_classification.py  test_local_coverage_pdfs.py  test_local_policy_classification_pdfs.py  test_local_policy_contract_terms_pdfs.py  test_local_policy_document_pdfs.py  test_local_policy_summary_quality.py  test_local_sample_pdfs.py  test_parsing.py  test_pgvector_store.py  test_pipeline.py  test_policies_route.py  test_policy_classification.py  test_policy_contract_terms.py  test_policy_document_signal.py  test_policy_generation.py  test_policy_generation_eval.py  test_policy_llm_extraction.py  test_policy_rag.py  test_policy_summary.py  (+18 more)
(+756 files in other folders)
