[project]
name = "backend"
version = "0.1.0"
description = "Coverly backend API"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi>=0.139.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-vector-stores-postgres>=0.8.1",
    "openai>=1.109.1",
    "openai-agents>=0.18.3",
    "pdfplumber>=0.11",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "mypy>=2.2.0",
    "pypdf>=6.14.2",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "types-defusedxml>=0.7.0.20250822",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
